oxiplate-derive/tests/broken/if/if-let-malformed-struct.stderr
error: Expected a field
  --> tests/broken/if/if-let-malformed-struct.rs:10:20
   |
10 | {%- if let Value { % } -%}
   |                    ^
